# backend

./: .dockerignore  .env-example  CLAUDE.md  Dockerfile  Instruction.md  ParserDoc.md  README.md  alembic.ini  config.py  docker-compose.test.yml  docker-compose.yml  makefile  poetry_mac_init.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: build-and-push.yml  ci.yml  deploy.yml  deploylogs.yml  release-image.yml  release.yml
app/: authorization_schemas.py  exam_schemas.py  main.py  schemas.py  session_schemas.py  user_schemas.py
app/api/: routes.py
app/api/routes/: auth.py  exams.py  session.py  users.py
app/core/: config.py
domain/: exam_session.py
domain/services/: session_factory.py
helpers/: clear_db.py  init_db.py
infrastructure/: authorization.py  models.py  models_registry.py
infrastructure/exam/: exam.py  exam_repo.py
infrastructure/exceptions/: UnexceptableStrategy.py  exam_has_no_cards.py  exam_not_found.py  invalid_authorization_header.py  invalid_or_expired_token.py  question_not_in_session.py  session_not_found.py  user_already_exists.py  user_is_not_creator.py  user_not_found.py  wrong_login_or_password.py  wrong_n_value.py
infrastructure/notification/: notification.py  notification_repo.py
infrastructure/statistic/: stat_repo.py  statistic.py
infrastructure/user/: user.py  user_repo.py
migrations/: env.py
migrations/versions/: 20260409_0001_initial_schema.py
mocks/: mock_users.py  request.py
notificator/: notificator.py
tests/: conftest.py  general_test.py  test_health.py
tests/unit/: USAGE_EXAMPLES.md  conftest.py  mock_data.py  test_auth.py  test_authorization.py  test_exam_repo.py  test_exam_session.py  test_ocr.py  test_schemas.py  test_session_factory.py  test_stat_repo.py  test_user_repo.py
tprep/app/: app_types.py  authorization_schemas.py  card_schemas.py  exam_schemas.py  main.py  notification_schemas.py  ocr_schemas.py  push_schemas.py  requests_models.py  session_schemas.py  types.py  user_schemas.py
tprep/domain/: exam_session.py
tprep/domain/services/: ai_answer_generator.py  session_factory.py
tprep/helpers/: clear_db.py  init_db.py
tprep/infrastructure/: __init__.py  authorization.py  database.py  ocr.py
tprep/infrastructure/exam/: exam.py  exam_repo.py
tprep/infrastructure/exceptions/: UnexceptableStrategy.py  ai_generation_failed.py  card_not_found.py  exam_has_no_cards.py  exam_not_found.py  file_decode.py  file_extension.py  file_parsing.py  invalid_authorization_header.py  invalid_or_expired_token.py  question_not_in_session.py  session_not_found.py  user_already_exists.py  user_is_not_creator.py  user_not_found.py  wrong_login_or_password.py  wrong_n_value.py
tprep/infrastructure/notification/: notification.py  notification_repo.py  (+1 more)
tprep/mocks/: mock_users.py  request.py
tprep/notificator/: notificator.py
(+13 files in other folders)
