[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (==0.115.2)",
    "uvicorn[standard] (==0.30.6)",
    "pydantic (==2.9.2)",
    "pydantic-settings (==2.6.0)",
    "sqlalchemy (==2.0.35)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-jose (==3.4.0)",
    "passlib[bcrypt] (==1.7.4)",
    "python-dotenv (==1.0.1)",
    "alembic (>=1.17.0,<2.0.0)",
    "bcrypt (==4.0.1)",
    "pytest (==8.3.3)",
    "pytest-asyncio (==0.24.0)",
    "httpx (==0.27.2)",
    "ruff (==0.6.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
