[project]
name = "t-prep-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "KurganDev"}
]
readme = "README.md"
dynamic = ["dependencies"]
requires-python = ">=3.13,<4.0"

[tool.poetry]
packages = [
    { include = "tprep" },
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "==0.115.2"
uvicorn = { version = "==0.30.6", extras = ["standard"] }
pydantic = "==2.9.2"
pydantic-settings = "==2.6.0"
sqlalchemy = "==2.0.35"
psycopg2-binary = ">=2.9.11,<3.0.0"
python-jose = "==3.4.0"
passlib = { version = "==1.7.4", extras = ["bcrypt"] }
python-dotenv = "==1.0.1"
alembic = ">=1.17.0,<2.0.0"
bcrypt = "==4.0.1"
httpx = "==0.27.2"
email-validator = "^2.3.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
ruff = "==0.6.8"
freezegun = "^1.2.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.3.1"
pytest-random-order = "^1.0.4"
pytest-xdist = "^2.1.0"
pytest = "==8.3.3"
pytest-asyncio = "==0.24.0"
pytest-markers-presence = "^0.12.0"
pytest-rerunfailures = "^9.1.1"
types-requests = "^2.27.3"
types-cachetools = "^4.2.8"
types-pytz = "^2021.3.4"
sadisplay = "^0.4.9"
requests-mock = "^1.9.3"
mypy = "1.15.0"
mypy-extensions = "^1.0.0"
filelock = "^3.12.4"
matplotlib = "^3.9.2"
pytest-deadfixtures = "^2.2.1"
testcontainers = {extras = ["postgresql"], version = "^4.13.2"}

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
python_version = "3.13"

enable_error_code = "truthy-bool"
check_untyped_defs = true
strict_optional = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    'tests/*',
    'common/alembic/*',
    'gunicorn_config.py',
]